# kernelshark-xentrace-plugin-rs

./: .gitignore  Cargo.toml  README.md
src/: functions.rs  ifunctions.rs  interface.rs  lib.rs  macros.rs  util.rs
src/cbind/: mod.rs  xen.rs
src/cbind/kshark/: context.rs  entry.rs  interface.rs  mod.rs  stream.rs
src/decoder/: mod.rs  timestamp.rs
src/decoder/info/: mod.rs
src/decoder/name/: hvm.rs  hw.rs  mod.rs  sched.rs
src/ffi/: mod.rs  xen.rs
src/ffi/kshark/: context.rs  entry.rs  interface.rs  mod.rs  stream.rs
src/ffi/libkshark/: data_stream.rs  entry.rs  generic_stream_interface.rs  mod.rs
src/ffi/libkshark_plugin/: mod.rs
src/interface/: kshark.rs
src/stringify/: mod.rs  rec_info.rs  rec_name.rs
src/stringify/rec_info/: mod.rs
src/stringify/rec_name/: hvm.rs  hw.rs  mod.rs  sched.rs
src/util/: mod.rs  pointer.rs  string.rs
