[package]
name = "kernelshark-xentrace-plugin"
description = "KernelShark XenTrace plugin using Rust and FFI"
version = "0.1.13"
authors = ["Giuseppe Eletto <peppe.eletto@gmail.com>"]
readme = "README.md"
license = "LGPL-2.1-or-later"
keywords = ["xen", "xentrace", "kenelshark", "ks", "trace", "plugin", "ffi"]
repository = "https://github.com/giuseppe998e/kernelshark-xentrace-plugin-rs/"
rust-version = "1.56.1"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
libc = "^0.2"
xentrace-parser = "^0.10"

# These optimizations could save a few kb (~100kb).
# With `cargo build --profile release-minify`
[profile.release-minify]
inherits = "release"
codegen-units = 1
panic = "abort"
strip = true # rust 1.59+
