[package]
name = "kernelshark-xentrace-plugin"
description = "KernelShark XenTrace plugin using Rust and FFI"
version = "1.0.0"
authors = ["Giuseppe Eletto <giuseppe.eletto98@gmail.com>"]
readme = "README.md"
license = "LGPL-2.1-or-later"
keywords = ["xen", "xentrace", "kenelshark", "ks", "trace", "plugin", "ffi"]
repository = "https://github.com/giuseppe998e/kernelshark-xentrace-plugin-rs/"
rust-version = "1.56.1"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
libc = "^0.2"
xentrace-parser = "^1.1"

# These optimizations could save some disk space
# With `cargo build --profile release-minify`
[profile.release-minify]
inherits = "release"
codegen-units = 1
panic = "abort"
strip = true # rust 1.59+
lto = true
