[package]
name = "kernelshark-xentrace-plugin"
version = "1.2.0"
description = "KernelShark XenTrace plugin using Rust and FFI"
authors = ["Giuseppe Eletto <giuseppe.eletto98@gmail.com>"]
license = "LGPL-2.1-or-later"
rust-version = "1.65"
repository = "https://github.com/giuseppe998e/kernelshark-xentrace-plugin-rs/"
keywords = ["xen", "xentrace", "trace", "analyzer", "kenelshark", "ks", "plugin", "ffi"]
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
fxhash = "0.2"
lazy_static = "1.4"
libc = "0.2"
xentrace-parser = "2.1"

# These optimizations could save some disk space
# With `cargo build --profile release-minify`
[profile.release-minify]
inherits = "release"
codegen-units = 1
panic = "abort"
strip = true # rust 1.59+
lto = true
